    * itwp.album.tEtichetta - Add at RC stage
    * itwp.album.tGenere - From Beta to Stable
    * tplckr - Create a template checker
    * tplckr.status - Add a status file for itwp
    * tplckr.itwp.album.pAnno - Created
    * tplckr.itwp.album.pGenere - Created
    * tplckr.itwp.album.pTipo - Created
    * tplckr.itwp.film.pAnnouscita - Created
    * tplckr.itwp.film.pDurata - Created
    * tplckr.itwp.film.pTipoaudio - Created
    * tplckr.itwp.film.pTipocolore - Created

Version 5.0 (11/03/2012)
    * itwp.operaarte add tMateriale
    * itwp.operaarte add tTecnica
    * itwp.operaarte add tAltezza
    * Create the base for a rolling devel
    * devel add devel.php
    * devel remove status.html
    * devel add status.php
    * devel implement it in all classes
    * git suppressing all branch Y.x
    * git create a stable branch

Version 4.1.1 (08/03/2012)
    * Make c and p available for all classes
    * itwp.operaarte add initial support
    * itwp.film fix for CaSeS
    * status add file status.html

Version 4.1 (07/03/2012)
    * Change twitter library
    * Create dbcreate.php account functions to enable new accounts
    * Create dyrki/tools.php class with dbcreate.php code
    * tools rename dbcreate.php
    * tools add follow function
    * tools add add source function
    * tools add add template function
    * itwp.nave add initial support
    * itwp.album add initial support
    * Fix a bug that was reducing the possible tweet considerably due to some inconsistences between CaSeS
    * itwp.libro add support

Version 4.0 (25/02/2012)
    * Removed all unused files
    * Create a folder in 'class' for each wiki
    * Create a folder system in 'class' that will allow a shared library
    * Remove test_tweet.php since it will no be used any longer
    * Rename build_tweet.php in tweet.php
    * Create a source class to be able to abstract from the actual source
    * Modify the database to allow multiple sources